fix loadmore with throttle and add features comment

--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "immutability-helper": "^2.6.6",
     "js-base64": "^2.4.3",
     "jwt-decode": "^2.2.0",
+    "lodash.throttle": "^4.1.1",
     "luxon": "^0.5.3",
     "megadraft": "^0.4.35",
     "moment": "^2.20.1",
@@ -27,6 +28,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.1",
     "react-sidebar": "^2.3.2",
+    "react-toggled": "^1.2.6",
     "reactjs-popup": "^1.0.3",
     "redux": "^3.7.2",
     "redux-act": "^1.7.2",
