--- a/app/package.json
+++ b/app/package.json
@@ -36,11 +36,11 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_MODE=dev react-scripts start",
+    "build": "REACT_APP_MODE=pro react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-	"serve": "serve -s build"
+	"serve": "REACT_APP_MODE=pro serve -s build"
   },
   "devDependencies": {
     "eslint": "^4.19.0",
