--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,8 @@
     "react-flexview": "^3.0.1",
     "react-inline-edit": "^3.0.0",
     "react-inline-editing": "^1.0.10",
+    "react-jw-player": "^1.18.1",
+    "react-jwplayer": "^0.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
