--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "megadraft": "^0.4.35",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-autosize-textarea": "^3.0.2",
     "react-dom": "^16.2.0",
