--- a/app/package.json
+++ b/app/package.json
@@ -45,7 +45,9 @@
   },
   "scripts": {
     "start": "REACT_APP_MODE=dev react-scripts start",
+    "start-windows": "set REACT_APP_MODE=dev && react-scripts start",
     "build": "REACT_APP_MODE=pro react-scripts build",
+    "build-windows": "set REACT_APP_MODE=pro && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "serve": "REACT_APP_MODE=pro serve -s build"
